# crewAI

./: README.md  docker-compose.yml
.github/workflows/: build.yml
data/: input.txt
summarizer/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  string_to_period_converter_task.txt  summarize.txt  summarizer_task.txt
summarizer/crewai-simmarizer/: bruno.json  post-request.bru
summarizer/src/summarizer/: app.py  crew.py  input.txt  main.py
summarizer/src/summarizer/config/: agents.yaml  tasks.yaml
summarizer/src/summarizer/tools/: custom_tool.py
view/: .swp  Dockerfile  README  data.txt  docker-compose.yaml  input.txt  pyproject.toml
view/ui/: webapp.py
